if(with_smyrna)

  find_package(Freetype REQUIRED)
  find_package(GLUT REQUIRED)
  find_package(GTK2 REQUIRED COMPONENTS gtk glade)
  find_package(PANGOCAIRO REQUIRED)
  find_package(PkgConfig REQUIRED)
  pkg_check_modules(XRENDER REQUIRED xrender)

  add_library(glcomp
    glcompbutton.h
    glcompdefs.h
    glcompfont.h
    glcompimage.h
    glcomplabel.h
    glcompmouse.h
    glcomppanel.h
    glcompset.h
    glcomptextpng.h
    glcomptexture.h
    glpangofont.h
    glutils.h
    opengl.h

    glcompbutton.c
    glcompfont.c
    glcompimage.c
    glcomplabel.c
    glcompmouse.c
    glcomppanel.c
    glcompset.c
    glcomptextpng.c
    glcomptexture.c
    glpangofont.c
    glutils.c
  )

  target_include_directories(glcomp PRIVATE
    ..
    ../common
  )

  target_include_directories(glcomp SYSTEM PRIVATE
    ${Freetype_INCLUDE_DIRS}
    ${GLUT_INCLUDE_DIRS}
    ${GTK2_INCLUDE_DIRS}
    ${PANGOCAIRO_INCLUDE_DIRS}
    ${XRENDER_INCLUDE_DIRS}
  )

  if(WIN32 AND NOT MINGW)
    target_include_directories(glcomp PRIVATE ../../windows/include/unistd)
  endif()

  target_link_libraries(glcomp PRIVATE
    ${Freetype_LIBRARIES}
    ${GLUT_LIBRARIES}
    ${GTK2_LIBRARIES}
    ${PANGOCAIRO_LIBRARIES}
    ${XRENDER_LIBRARIES}
  )

endif()
